nydusd: change log level at rumtime thru api server
With nydus openapi, send http/put request to api server to
change runtime logging level. We now don't provide cli helper to
configure nydusd. Just compose a http request like,

curl --unix-socket <path/to/api-socket> http://localhost/api/v1/daemon  -vvv -XPUT  --data {\"log_level\":\ \"warn\"}

Also, this patch adds daemon configuration related declaration into openapi yaml
